examples/fail/return_bare_nonvoid.hax
module ZZZ::ReturnBareNonVoid;

sub main() -> Int {
  return;
}
